add bootstrap and customization

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
-<h1>Welcome to Lifehack</h1>
+<div class="jumbotron">
+	<h1>Welcome to Lifehack</h1>
+	<p>We are all about making life easier and cooler!</p>
+	<p>Clikc here to <%= link_to "join us", "#", class: "btn btn-primary btn-lg" %></p>
 
-<p>We are all about making life easier and cooler!</p>
+</div>
 
-<%= link_to "Amazon", "http://amazon.com"%>
-<a href="http://google.com">Google<a>
+ 
