add  pg and rails_12factor gems

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,7 @@
 	<h1>Welcome to Lifehack</h1>
 	<p>We are all about making life easier and cooler!</p>
 	<p>Clikc here to <%= link_to "join us", "#", class: "btn btn-primary btn-lg" %></p>
+	<p>Already have an account? <% link_to "log in here", "#" %></p>
 
 </div>
 
