--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,12 @@
 <div class="jumbotron">
 	<h1>Welcome to Lifehack</h1>
 	<p>We are all about making life easier and cooler!</p>
-	<p>Clikc here to <%= link_to "join us", "#", class: "btn btn-primary btn-lg" %></p>
-	<p>Already have an account? <% link_to "log in here", "#" %></p>
-
+	<% if user_signed_in? %>
+	do something
+	<% else %>
+	<p>Clikc here to <%= link_to "join us", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
+	<p>Already have an account? <%= link_to "log in here", new_user_session_path %></p>
+	<% end %>
 </div>
 
  
