add user/hacks association

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,6 +1,7 @@
-$body-bg: #2ecc71;
-$body-bg: #2ecc71;
-$jumbotron-bg: #ecf0f1;
+$body-bg: #ecf0f1;
+$jumbotron-bg: white;
+$navbar-default-bg: white;
+$navbar-default-link-color: black;
 
 
 @import 'bootstrap';
