--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Lifehack", root_path, class: "navbar-brand" %>
+      <ul class="nav navbar-nav navbar-right">
+      <li><%= link_to "Lifehack", root_path, class: "navbar-brand" %></li>
+      <li><%=link_to "Create new hack", new_hack_path %></li>
+     </ul>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
