--- a/app/views/hacks/_form.html.erb
+++ b/app/views/hacks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@hack) do |f| %>
+<%= form_for @hack, html: { multipart: true } do |f| %>
   <% if @hack.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@hack.errors.count, "error") %> prohibited this hack from being saved:</h2>
@@ -11,11 +11,16 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
+  <div class="form-group">
+    <%= f.label :image %><br>
+    <%= f.file_field :image, class: "form-control" %>
   </div>
-  <div class="actions">
+
+  <div class="form-group">
+    <%= f.label :description %><br>
+    <%= f.text_field :description, class: "form-control" %>
+  </div>
+  <div class="form-group">
     <%= f.submit %>
   </div>
 <% end %>
