--- a/app/views/hacks/show.html.erb
+++ b/app/views/hacks/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<%= image_tag @hack.image.url(:medium) %>
 
 <p>
   <strong>Description:</strong>
@@ -6,7 +6,7 @@
 </p>
 
 <% if @hack.user == current_user %>
-<%= link_to 'Edit', edit_hack_path(@hack) %> 
+	<%= link_to 'Edit', edit_hack_path(@hack) %> 
 <% end %>
 <%= link_to 'Back', hacks_path %>
 
