--- a/app/views/hacks/index.html.erb
+++ b/app/views/hacks/index.html.erb
@@ -1,20 +1,25 @@
+<%= render 'pages/home' unless user_signed_in? %>
+
 <div id="hacks" class="transitions-enabled">
   <% @hacks.each do |hack| %>
     <div class="box panel panel-default">
-      <%= image_tag hack.image.url(:medium) %>
+      <%= link_to image_tag(hack.image.url(:medium)), hack %>
       <div class="panel-body">
-        <%= hack.description if hack.user %>
+        <strong><%= hack.description if hack.user %></strong>
+        <br>
         <%= hack.user.email if hack.user %>
-        <%= link_to 'Show', hack %>
         <% if hack.user == current_user %>
-          <%= link_to 'Edit', edit_hack_path(hack) %>
-          <%= link_to 'Destroy', hack, method: :delete, data: { confirm: 'Are you sure?' } %>
+         <div class="actions">
+          <%= link_to edit_hack_path(hack) do %>
+            <span class="glyphicon glyphicon-edit"></span> Edit
+          <% end %>
+          <%= link_to hack, method: :delete, data: { confirm: 'Are you sure?' } do %>
+          <span class="glyphicon glyphicon-trash"></span> Delete
+          <% end %>
+         </div>
         <% end %>
      </div>
     </div>
   <% end %>
 </div>
-
-
-
 
