--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,6 @@
       </button>
       <ul class="nav navbar-nav navbar-right">
       <li><%= link_to "Lifehack", root_path, class: "navbar-brand" %></li>
-      <li><%=link_to "Create new hack", new_hack_path %></li>
      </ul>
     </div>
 
@@ -21,7 +20,11 @@
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About", about_path %></li>
         <% if user_signed_in? %>
-          <li><%= link_to 'New Hack', new_hack_path %></li>
+          <li>
+            <%= link_to new_hack_path do %>
+              <span class="glyphicon glyphicon-plus"></span> New Hack
+            <% end %>
+          </li>
           <li><%= link_to "Account settings", edit_user_registration_path %></li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         <% else %>
