--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,6 +1,5 @@
 <div class="jumbotron">
-	<h1>Welcome to Lifehack</h1>
+	<h1>Life is too short not to hack everything</h1>
 	<p>Clikc here to <%= link_to "join us", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
-	<p>Already have an account? <%= link_to "log in here", new_user_session_path %></p>
 </div>
 
