--- a/app/views/hacks/show.html.erb
+++ b/app/views/hacks/show.html.erb
@@ -4,7 +4,8 @@
   <div class="col-md-offset-2 col-md-8">
     <div class="panel panel-default">
       <div class="panel-heading center">
-        <%= image_tag @hack.image.url(:medium) %>
+        <%= image_tag(@hack.image.url) %>
+
       </div>
       <div class="panel-body">
         <p><%= @hack.description %></p>
@@ -17,6 +18,7 @@
         <a href="https://twitter.com/share" class="twitter-share-button" data-size="large" data-dnt="true">Tweet</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
+        <%= link_to "like", likes_path(:user_id => @hack, :hack_id => @hack), :method => :post %>
         <button><%= link_to "Comment", new_comment_path %></button>
       </div>
     </div>
