--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,13 +18,12 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "About", about_path %></li>
         <% if user_signed_in? %>
           <li><%= link_to new_hack_path do %>
               <span class="glyphicon glyphicon-plus"></span> New Hack
               <% end %>
           </li>
-          <li><%= link_to "My hacks", user_path(current_user) %></li>
+          <li><%= link_to "My Hacks", user_path(current_user) %></li>
           <li><%= link_to "Account settings", edit_user_registration_path %></li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         <% else %>
