--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,10 +12,14 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :comment %><br>
-    <%= f.text_field :comment, class: "form-control" %>
+    <%= f.label :comments %><br>
+    <%= f.text_area :comment, class: "form-control" %>
+    <%= f.hidden_field :hack_id, value: @hack.id %>
   </div>
   <div class="form-group">
-    <%= f.submit %>
+    <%= f.submit "Post comment" %>
   </div>
 <% end %>
+
+
+
