using an hacky way to make modal work

--- a/app/views/hacks/_form.html.erb
+++ b/app/views/hacks/_form.html.erb
@@ -1,3 +1,4 @@
+<% @hack = Hack.new if !@hack %>
 <%= form_for @hack, html: { multipart: true } do |f| %>
   <% if @hack.errors.any? %>
     <div id="error_explanation">
