--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -17,7 +17,7 @@
     <%= f.hidden_field :hack_id, value: @hack.id %>
   </div>
   <div class="form-group">
-    <%= f.submit "Post comment" %>
+    <div class="post_btn"><%= f.submit "Post comment" %></div>
   </div>
 <% end %>
 
