--- a/app/views/hacks/_form.html.erb
+++ b/app/views/hacks/_form.html.erb
@@ -22,6 +22,6 @@
     <%= f.text_field :description, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.submit %>
+    <%= f.submit "Create", :class => "btn btn-warning btn-lg" %>
   </div>
 <% end %>
