--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
       </button>
       <ul class="nav navbar-nav navbar-right">
         <li><strong><%= link_to "LifeHacker", root_path, class: "navbar-brand" %></strong></li>
-        <li><button class = "btn btn-warning" data-toggle="modal" data-target="#new_hack">+ new hack</button></li>
+        <li><button class = "btn btn-warning" data-toggle="modal" data-target="#new_hack">+ NEW HACK</button></li>
       </ul>
     </div>
 
