fix comments routing

--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
 	<h1>Life is too short not to hack everything</h1>
-	<p>Clikc here to <%= link_to "join us", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
+	<div class="join_us"><p>Click here to <%= link_to "join us", new_user_registration_path, class: "btn btn-primary btn-lg" %></p></div>
 </div>
 
