add more styling to profile page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -8,7 +8,7 @@
 .profile_picture {
 	width: 150px;
 	height: 150px;
-	background-image: url("http://i.imgur.com/9GrOH9h.jpg?1");
+	background-image: url("http://i.imgur.com/IljgVqS.jpg?1");
 	display: inline-block;
 	float: left;
 }
