add ajax for likes

--- a/app/assets/stylesheets/hacks.css.scss
+++ b/app/assets/stylesheets/hacks.css.scss
@@ -64,4 +64,18 @@
 
 }
 
+.num-likes {
+	width: 30px;
+	display: inline-block;
+	text-align: center;
+	background-color: #ecf0f1;
+}
+
+.awesome-btn {
+	width: 90px;
+	display: inline-block;
+}
+
+
+
 
