--- a/app/views/hacks/index.html.erb
+++ b/app/views/hacks/index.html.erb
@@ -8,12 +8,11 @@
       <div class="panel-body">
         <strong><%= hack.description if hack.user %></strong>
         <br>
-        <p><%= hack.likes.count %></p>
+        
         <br>
         <p>by <%= link_to hack.user.name, hack.user if hack.user %></p>
-        <%= link_to likes_path(:user_id => hack, :hack_id => hack), :method => :post do %>
-        <span class="glyphicon glyphicon-hand-up"></span> Awesome
-        <% end %>     
+        <a class="awesome-btn" onclick="addLike(<%=hack.id%>)"><span class="glyphicon glyphicon-hand-up"></span> Awesome</a>    
+        <p class="num-likes"><%= hack.likes.count %></p>
      </div>
     </div>
   <% end %>
