--- a/app/views/hacks/show.html.erb
+++ b/app/views/hacks/show.html.erb
@@ -5,7 +5,7 @@
     <div class="panel panel-default">
       <div class="panel-heading center">
         <div class="showimage">
-        <%= image_tag(@hack.image.url) %>
+        <%= image_tag(@hack.image.url(:large)) %>
         </div>
       </div>
       <div class="panel-body">
