--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,35 @@
+<div class="signup_form">
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h2>Welcome! You are about to become a life hacker</h2>
+		</div>
+		<div class="panel-body">
+			<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+			  <%= devise_error_messages! %>
 
-<div class="panel panel-default">
-	<div class="panel-heading">
-		<h2>Sign up</h2>
+			  <div class="form-group">
+			    <%= f.label :name %>
+			    <%= f.text_field :name, class: "form-control", :autofocus => true %>
+			  </div>
+
+			  <div class="form-group">
+			  <%= f.label :email %>
+			  <%= f.email_field :email, autofocus: true, class: "form-control" %>
+				</div>
+
+			  <div class="form-group">
+			  	<%= f.label :password %>
+			  	<%= f.password_field :password, class: "form-control" %>
+				</div>
+
+			  <div class="form-group">
+			  	<%= f.submit "Sign up", class: "btn btn-primary" %>
+			  </div>
+			<% end %>
 	</div>
-	<div class="panel-body">
-		<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-		  <%= devise_error_messages! %>
 
-		  <div class="form-group">
-		    <%= f.label :name %>
-		    <%= f.text_field :name, class: "form-control", :autofocus => true %>
-		  </div>
-
-		  <div class="form-group">
-		  <%= f.label :email %>
-		  <%= f.email_field :email, autofocus: true, class: "form-control" %>
-			</div>
-
-		  <div class="form-group">
-		  	<%= f.label :password %>
-		  	<%= f.password_field :password, class: "form-control" %>
-			</div>
-
-		  <div class="form-group">
-		  	<%= f.submit "Sign up", class: "btn btn-primary" %>
-		  </div>
-		<% end %>
-</div>
-
-	<div class="panel-footer">
-		<%= render "devise/shared/links" %>
+		<div class="panel-footer">
+			<%= render "devise/shared/links" %>
+		</div>
 	</div>
 </div>
