change btn color

--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
 	<h1>Life is too short not to hack Everything</h1>
-	<div class="join_us"><p><%= link_to "Start Hacking", new_user_registration_path, class: "btn btn-primary btn-lg" %></p></div>
+	<div class="join_us"><p><%= link_to "Start Hacking", new_user_registration_path, class: "btn btn-warning btn-lg" %></p></div>
 </div>
 
